--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,18 @@
             <version>5.10.0</version>
             <scope>test</scope>
         </dependency>
+        <!-- Jackson  -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.17.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.3</version> <!-- o l'ultima disponibile -->
+        </dependency>
 
         <!-- Mockito (opzionale) -->
         <dependency>
